--- a/home.html
+++ b/home.html
@@ -1,1 +1,11 @@
-salam
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>پروژه ی تمرینی گیت</title>
+</head>
+<body>
+    <h1>اینجا صفحه ی  اصلی سایت تمرینی هست</h1>
+</body>
+</html>
