edit background body

--- a/home.html
+++ b/home.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پروژه ی تمرینی گیت</title>
+     <style>
+        body{
+            background-color: bisque;
+        }
+     </style>
 </head>
 <body>
     <h1>اینجا صفحه ی  اصلی سایت تمرینی هست</h1>
+    <h2>بک گرانت کرمی</h2>
 </body>
 </html>
